--- a/pages/category/category.less
+++ b/pages/category/category.less
@@ -1,10 +1,52 @@
 /* pages/category/category.wxss */
 page{
-    display: flex;
+    height: 100%;
 }
-.left_menu{
-    flex: 2; 
-}
-.right_content{
-    flex: 5;
+.cates {
+    height: 100%;
+    .cates_container{
+        /*less中使用calc会直接计算出结果，如果要原样输出就通过~''包起来*/
+        height: ~'calc(100vh - 90rpx)';
+        display: flex;
+        .left_menu{
+            /*flex是伸缩盒子，这里2表示成为子项，则默认高度是100%*/
+            flex: 2; 
+            .menu_item{
+                height: 80rpx;
+                display: flex;
+                justify-content: center;/*文字水平*/
+                align-items: center;/*垂直居中*/
+                font-size: 30rpx;
+            }
+            .active{
+                color: var(--themeColor);
+                border-left: 5rpx solid currentColor;
+            }
+        }
+        .right_content{
+            flex: 5;
+            .goods_group{
+                .goods_title{
+                    height: 80rpx;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    .delimeter{
+                        color: #ccc;
+                        padding: 0 10rpx;
+                    }
+                }
+                .goods_list{
+                    display: flex;
+                    flex-wrap: wrap;
+                    navigator{
+                        width: 33.33%;
+                        text-align: center;
+                        image{}
+                        .goods_name{}
+                    }
+                }
+            }
+        }
+    }
 }
