--- a/pages/category/category.wxml
+++ b/pages/category/category.wxml
@@ -6,11 +6,14 @@
             <view class="menu_item {{index===currentIndex?'active':''}}" 
             wx:for="{{leftMenuList}}" 
             wx:key="*this"
-            wx:for-index="index">
+            wx:for-index="index"
+            bindtap="handleItemTap"
+            data-index="{{index}}"
+            >
             {{item}}
             </view>
         </scroll-view>
-        <scroll-view scroll-y="true"  class="right_content">
+        <scroll-view scroll-top="{{scrollTop}}" scroll-y="true"  class="right_content">
             <view class="goods_group" 
             wx:for="{{rightContent}}" 
             wx:for-index="index1"
