--- a/pages/category/category.wxml
+++ b/pages/category/category.wxml
@@ -29,6 +29,7 @@
                     wx:for-index="index2"
                     wx:for-item="item2"
                     wx:key="cat_id"
+                    url="../goods_list/goods_list?cid={{item2.cat_id}}"
                     >
                         <image mode="widthFix" src="{{item2.cat_icon}}"></image>
                         <view class="goods_name">{{item2.cat_name}}</view>
