--- a/pages/goos_detail/goos_detail.wxss
+++ b/pages/goos_detail/goos_detail.wxss
@@ -1,1 +1,45 @@
 /* pages/goos_detail/goos_detail.wxss */
+.detail_swiper swiper {
+  height: 65vw;
+  text-align: center;
+}
+.detail_swiper swiper image {
+  width: 60%;
+}
+.goods_price {
+  padding: 15rpx;
+  font-weight: 600;
+  font-size: 35rpx;
+  color: var(--themeColor);
+}
+.goods_name_row {
+  border-top: 5rpx solid #dedede;
+  border-bottom: 5rpx solid #dedede;
+  padding: 10rpx 0;
+  display: flex;
+}
+.goods_name_row .goods_name {
+  flex: 6;
+  color: #000;
+  font-size: 30rpx;
+  padding: 0 10rpx;
+  /*实现文字总共只有两行，如果内容过长则显示为...*/
+  display: -webkit-flex;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+.goods_name_row .goods_collect {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-left: 2rpx #000 solid;
+}
+.goods_info .goods_info_title {
+  color: var(--themeColor);
+  font-size: 32rpx;
+  font-weight: 600;
+  padding: 10rpx 10rpx;
+}
