--- a/pages/goos_detail/goos_detail.less
+++ b/pages/goos_detail/goos_detail.less
@@ -1,4 +1,9 @@
 /* pages/goos_detail/goos_detail.wxss */
+page {
+    /*因为底部工具栏占了90rpx的高度，所以这里需要设置一下，
+    这样才能保证页面展示完全*/
+    padding-bottom: 90rpx;
+}
 .detail_swiper {
     swiper{ 
         height: 65vw;
@@ -53,6 +58,7 @@
     .goods_info_content{}
 }
 .btn_tools{
+    border-top: 1px solid #ccc;
     position: fixed;
     left: 0;
     bottom: 0;
@@ -66,6 +72,16 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        font-size: 20rpx;
+        position: relative;
+        button{
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+        }
     }
     .btn_cart{
         flex: 2;
