--- a/pages/goos_detail/goos_detail.wxss
+++ b/pages/goos_detail/goos_detail.wxss
@@ -1,4 +1,9 @@
 /* pages/goos_detail/goos_detail.wxss */
+page {
+  /*因为底部工具栏占了90rpx的高度，所以这里需要设置一下，
+    这样才能保证页面展示完全*/
+  padding-bottom: 90rpx;
+}
 .detail_swiper swiper {
   height: 65vw;
   text-align: center;
@@ -44,6 +49,7 @@
   padding: 10rpx 10rpx;
 }
 .btn_tools {
+  border-top: 1px solid #ccc;
   position: fixed;
   left: 0;
   bottom: 0;
@@ -58,6 +64,16 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: 20rpx;
+  position: relative;
+}
+.btn_tools .tool_item button {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
 }
 .btn_tools .btn_cart {
   flex: 2;
