--- a/pages/goos_detail/goos_detail.wxml
+++ b/pages/goos_detail/goos_detail.wxml
@@ -46,7 +46,7 @@
             购物车
         </view>
     </navigator>
-    <view class="tool_item btn_cart">
+    <view class="tool_item btn_cart" bind:tap="handleCartAdd">
         加入购物车
     </view>
     <view class="tool_item btn_buy">
