--- a/pages/cart/cart.less
+++ b/pages/cart/cart.less
@@ -9,3 +9,88 @@
         text-align: right;
     }
 }
+
+.cart_content {
+    .cart_title {
+        padding: 20rpx;
+        font-size: 36rpx;
+        color: var(--themeColor);
+        border-top: 1rpx solid currentColor;
+        border-bottom: 1rpx solid currentColor;
+    }
+  
+    .cart_main {
+      .cart_item {
+        display: flex;
+        padding: 10rpx;
+        border-bottom: 1px solid #ccc;
+        .cart_chk_wrap {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          checkbox-group {
+            checkbox {
+  
+            }
+          }
+        }
+  
+        navigator.cart_img_wrap {
+            flex: 2;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          image {
+            width: 80%;
+          }
+        }
+  
+        .cart_info_wrap {
+            flex: 4;
+            display: flex;
+            justify-content: space-around;
+            // align-items: center;
+            flex-direction: column;
+          .goods_name {
+              display: -webkit-box;
+              overflow: hidden;
+              -webkit-box-orient: vertical;
+              -webkit-line-clamp: 2;
+              color: #666;
+            // flex: 2;
+          }
+  
+          .goods_price_wrap {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            .goods_price {
+                color: var(--themeColor);
+                font-size: 34rpx;
+            }
+  
+            .cart_num_tool {
+                display: flex;
+              .num_edit {
+                  width: 50rpx;
+                  height: 50rpx;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                border: 1rpx solid #ccc;
+              }
+  
+              .goods_num {
+                width: 50rpx;
+                  height: 50rpx;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
