--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -15,21 +15,32 @@
         <view class="user_phone">{{address.telNumber}}</view>
     </view>
 </view>
-<view class="cart_content" wx:for="{{cart}}" wx:key="goods_id">
+<view class="cart_content">
     <view class="cart_title">购物车</view>
     <view class="cart_main">
-        <view class="cart_item">
-            <!---->
+        <view class="cart_item" wx:for="{{cart}}" wx:key="goods_id">
+            <!--复选框-->
             <view class="cart_chk_wrap">
                 <checkbox-group bindchange="">
                     <checkbox/>
                 </checkbox-group>
             </view>
+            <!--商品图片-->
             <navigator class="cart_img_wrap" target="" url="" hover-class="navigator-hover" open-type="navigate">
-                <image src="{{item.pics[0].pics_mid}}" mode="widthFix" lazy-load="false" binderror="" bindload="" />
-                  
+                <image src="{{item.pics[0].pics_mid}}" mode="widthFix" lazy-load="false" binderror="" bindload="" />                 
             </navigator>
-            <view class="cart_info_wrap"></view>
+            <!--商品信息-->
+            <view class="cart_info_wrap">
+                <view class="goods_name">{{item.goods_name}}</view>
+                <view class="goods_price_wrap">
+                    <view class="goods_price">￥{{item.goods_price}}</view>
+                    <view class="cart_num_tool">
+                        <view class="num_edit">-</view>
+                        <view class="goods_num">{{item.num}}</view>
+                        <view class="num_edit">+</view>
+                    </view>
+                </view>
+            </view>
         </view>
     </view>
 </view>
