--- a/pages/cart/cart.less
+++ b/pages/cart/cart.less
@@ -94,3 +94,42 @@
       }
     }
   }
+  .footer_tool {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 90rpx;
+    border-top: 1px solid #ccc;
+    display: flex;
+    .all_chk_wrap {
+      flex: 2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .total_price_wrap {
+      flex: 5;
+      padding-right: 15rpx;
+      text-align: right;
+      .total_price {
+        .total_price_text {
+          font-size: 32rpx;
+          font-weight: 600;
+          color: var(--themeColor);
+        }
+      }
+    }
+  
+    .order_pay_wrap {
+      flex:3;
+      color: white;
+      background-color: var(--themeColor);
+      font-size: 32rpx;
+      font-weight: 600;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
