--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -22,7 +22,7 @@
             <!--复选框-->
             <view class="cart_chk_wrap">
                 <checkbox-group bindchange="">
-                    <checkbox/>
+                    <checkbox checked="{{item.checked}}"/>
                 </checkbox-group>
             </view>
             <!--商品图片-->
@@ -49,19 +49,19 @@
     <!-- 全选 -->
     <view class="all_chk_wrap">
         <checkbox-group bindchange="">
-            <checkbox  />全选
+            <checkbox  checked="{{allChecked}}"/>全选
         </checkbox-group>
           
     </view>
     <!-- 总价 -->
     <view class="total_price_wrap">
         <view class="total_price">
-            合计：<text class="total_price_text">￥999</text>
+            合计：<text class="total_price_text">￥{{totalPrice}}</text>
             <view>包含运费</view>
         </view>
     </view>
     <!-- 结算 -->
     <view class="order_pay_wrap">
-        结算(2)
+        结算({{totalNum}})
     </view>
 </view>
