--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -21,7 +21,7 @@
         <view class="cart_item" wx:for="{{cart}}" wx:key="goods_id">
             <!--复选框-->
             <view class="cart_chk_wrap">
-                <checkbox-group bindchange="">
+                <checkbox-group bindchange="handleItemChange" data-index="{{index}}">
                     <checkbox checked="{{item.checked}}"/>
                 </checkbox-group>
             </view>
@@ -48,7 +48,7 @@
 <view class="footer_tool">
     <!-- 全选 -->
     <view class="all_chk_wrap">
-        <checkbox-group bindchange="">
+        <checkbox-group bindchange="handleItemAllChecked">
             <checkbox  checked="{{allChecked}}"/>全选
         </checkbox-group>
           
