--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -35,9 +35,9 @@
                 <view class="goods_price_wrap">
                     <view class="goods_price">￥{{item.goods_price}}</view>
                     <view class="cart_num_tool">
-                        <view class="num_edit">-</view>
+                        <view class="num_edit" bind:tap="goodsNumChange" data-changevalue="{{-1}}" data-index="{{index}}">-</view>
                         <view class="goods_num">{{item.num}}</view>
-                        <view class="num_edit">+</view>
+                        <view class="num_edit" bind:tap="goodsNumChange" data-changevalue="{{1}}" data-index="{{index}}">+</view>
                     </view>
                 </view>
             </view>
