--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -18,30 +18,37 @@
 <view class="cart_content">
     <view class="cart_title">购物车</view>
     <view class="cart_main">
-        <view class="cart_item" wx:for="{{cart}}" wx:key="goods_id">
+        <block wx:if="{{cart.length!=0}}">
+            <view class="cart_item" wx:for="{{cart}}" wx:key="goods_id">
             <!--复选框-->
-            <view class="cart_chk_wrap">
-                <checkbox-group bindchange="handleItemChange" data-index="{{index}}">
-                    <checkbox checked="{{item.checked}}"/>
-                </checkbox-group>
-            </view>
-            <!--商品图片-->
-            <navigator class="cart_img_wrap" target="" url="" hover-class="navigator-hover" open-type="navigate">
-                <image src="{{item.pics[0].pics_mid}}" mode="widthFix" lazy-load="false" binderror="" bindload="" />                 
-            </navigator>
-            <!--商品信息-->
-            <view class="cart_info_wrap">
-                <view class="goods_name">{{item.goods_name}}</view>
-                <view class="goods_price_wrap">
-                    <view class="goods_price">￥{{item.goods_price}}</view>
-                    <view class="cart_num_tool">
-                        <view class="num_edit" bind:tap="goodsNumChange" data-changevalue="{{-1}}" data-index="{{index}}">-</view>
-                        <view class="goods_num">{{item.num}}</view>
-                        <view class="num_edit" bind:tap="goodsNumChange" data-changevalue="{{1}}" data-index="{{index}}">+</view>
+                <view class="cart_chk_wrap">
+                    <checkbox-group bindchange="handleItemChange" data-index="{{index}}">
+                        <checkbox checked="{{item.checked}}"/>
+                    </checkbox-group>
+                </view>
+                <!--商品图片-->
+                <navigator class="cart_img_wrap" target="" url="" hover-class="navigator-hover" open-type="navigate">
+                    <image src="{{item.pics[0].pics_mid}}" mode="widthFix" lazy-load="false" binderror="" bindload="" />                 
+                </navigator>
+                <!--商品信息-->
+                <view class="cart_info_wrap">
+                    <view class="goods_name">{{item.goods_name}}</view>
+                    <view class="goods_price_wrap">
+                        <view class="goods_price">￥{{item.goods_price}}</view>
+                        <view class="cart_num_tool">
+                            <view class="num_edit" bind:tap="goodsNumChange" data-changevalue="{{-1}}" data-index="{{index}}">-</view>
+                            <view class="goods_num">{{item.num}}</view>
+                            <view class="num_edit" bind:tap="goodsNumChange" data-changevalue="{{1}}" data-index="{{index}}">+</view>
+                        </view>
                     </view>
                 </view>
             </view>
-        </view>
+        </block>
+        <block wx:else>
+            <image src="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fhbimg.huabanimg.com%2Fa4064bdab5f6c800ed664014f3eb7d13a4dd25b3138d0-hYHe07_fw658&refer=http%3A%2F%2Fhbimg.huabanimg.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=auto?sec=1653344832&t=20bb15502583d2e15bbcecde9265e2a9" mode="widthFix"/>
+        </block>
+          
+        
     </view>
 </view>
 <!--底部工具栏-->
@@ -61,7 +68,7 @@
         </view>
     </view>
     <!-- 结算 -->
-    <view class="order_pay_wrap">
+    <view class="order_pay_wrap" bind:tap="handlePay">
         结算({{totalNum}})
     </view>
 </view>
