--- a/pages/pay/pay.wxml
+++ b/pages/pay/pay.wxml
@@ -1,2 +1,48 @@
-<!--pages/pay/pay.wxml-->
-<text>pages/pay/pay.wxml</text>
+<view class="revice_address_row">
+    <view class="address_info">
+        <view class="user_info">
+            <view>
+                收货人：{{address.userName}}
+            </view>
+            <view>
+                {{address.all}}
+            </view>
+        </view>
+        <view class="user_phone">{{address.telNumber}}</view>
+    </view>
+</view>
+<view class="cart_content">
+    <view class="cart_title">购物车</view>
+    <view class="cart_main">
+        <view class="cart_item" wx:for="{{cart}}" wx:key="goods_id">
+            <!--商品图片-->
+            <navigator class="cart_img_wrap" target="" url="" hover-class="navigator-hover" open-type="navigate">
+                <image src="{{item.pics[0].pics_mid}}" mode="widthFix" lazy-load="false" binderror="" bindload="" />                 
+            </navigator>
+            <!--商品信息-->
+            <view class="cart_info_wrap">
+                <view class="goods_name">{{item.goods_name}}</view>
+                <view class="goods_price_wrap">
+                    <view class="goods_price">￥{{item.goods_price}}</view>
+                    <view class="cart_num_tool">
+                        <view class="goods_num">X {{item.num}}</view>
+                    </view>
+                </view>
+            </view>
+        </view>        
+    </view>
+</view>
+<!--底部工具栏-->
+<view class="footer_tool">
+    <!-- 总价 -->
+    <view class="total_price_wrap">
+        <view class="total_price">
+            合计：<text class="total_price_text">￥{{totalPrice}}</text>
+            <view>包含运费</view>
+        </view>
+    </view>
+    <!-- 结算 -->
+    <view class="order_pay_wrap" bind:tap="handlePay">
+        支付({{totalNum}})
+    </view>
+</view>
